--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/ftpreavis/chat-service#readme",
   "dependencies": {
-    "fastify": "^5.3.0"
+    "@fastify/websocket": "^11.0.2",
+    "fastify": "^5.3.0",
+    "socket.io": "^4.8.1"
   }
 }
