--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "homepage": "https://github.com/ftpreavis/chat-service#readme",
   "dependencies": {
     "@fastify/websocket": "^11.0.2",
-    "socket.io": "^4.8.1",
     "fastify": "^5.3.0",
-    "fastify-metrics": "^12.1.0"
+    "fastify-metrics": "^12.1.0",
+    "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
