--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/ftpreavis/chat-service#readme",
   "dependencies": {
-    "@fastify/websocket": "^11.0.2",
+    "axios": "^1.9.0",
     "fastify": "^5.3.0",
     "fastify-metrics": "^12.1.0",
     "socket.io": "^4.8.1"
